--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -233,6 +233,7 @@
     "execa": "5.0.0",
     "figures": "3.2.0",
     "flat": "5.0.2",
+    "globby": "14.0.1",
     "ismobilejs": "1.1.1",
     "jest": "29.6.1",
     "jest-axe": "8.0.0",
