--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -269,7 +269,9 @@
     "typescript": "4.9",
     "typescript-transform-paths": "3.4.6",
     "@types/body-scroll-lock": "3.1.0",
-    "ramda": "0.29.1"
+    "ramda": "0.29.1",
+    "@razorpay/i18nify-js": "1.4.0",
+    "@razorpay/i18nify-react": "4.0.0"
   },
   "peerDependencies": {
     "react": ">=18",
@@ -283,7 +285,8 @@
     "react-native-svg": "^12.3.0",
     "react-native-gesture-handler": "^2.9.0",
     "@gorhom/bottom-sheet": "^4.4.6",
-    "@gorhom/portal": "^1.0.14"
+    "@gorhom/portal": "^1.0.14",
+    "@razorpay/i18nify-js": "^1.4.0"
   },
   "peerDependenciesMeta": {
     "react-native": {
