--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -128,79 +128,78 @@
     "chromatic": "npx chromatic",
     "publish-npm": "node ./scripts/publishToNpm.js",
     "generate-github-npmrc": "node ./scripts/generateGitHubRegistryNpmrc.js",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "test:playwright": "yarn playwright test",
+    "test:browserstack": "yarn browserstack-node-sdk playwright test --config=./playwright.config.ts"
   },
   "dependencies": {
-    "patch-package": "7.0.0",
     "@babel/runtime": "7.20.0",
-    "body-scroll-lock-upgrade": "1.1.0",
-    "ts-deepmerge": "6.2.0",
-    "use-presence": "1.1.0",
-    "@use-gesture/react": "10.2.24",
-    "@floating-ui/react": "0.25.4",
-    "react-hot-toast": "2.4.1",
     "@emotion/react": "11.11.1",
+    "@floating-ui/react": "0.25.4",
     "@table-library/react-table-library": "4.1.7",
-    "tinycolor2": "1.6.0"
+    "@use-gesture/react": "10.2.24",
+    "body-scroll-lock-upgrade": "1.1.0",
+    "patch-package": "7.0.0",
+    "react-hot-toast": "2.4.1",
+    "tinycolor2": "1.6.0",
+    "ts-deepmerge": "6.2.0",
+    "use-presence": "1.1.0"
   },
   "devDependencies": {
-    "http-server": "14.1.1",
-    "wait-on": "7.2.0",
-    "@storybook/addon-interactions": "7.6.6",
-    "@storybook/testing-library": "0.2.2",
-    "@storybook/test-runner": "0.16.0",
-    "@storybook/jest": "0.2.3",
-    "playwright": "1.40.1",
-    "chromatic": "6.22.0",
     "@babel/cli": "7.23.0",
     "@babel/core": "7.20.2",
+    "@babel/plugin-proposal-class-static-block": "7.21.0",
     "@babel/plugin-transform-react-jsx": "7.16.5",
     "@babel/plugin-transform-runtime": "7.16.5",
     "@babel/preset-env": "7.20.2",
     "@babel/preset-react": "7.16.5",
     "@babel/preset-typescript": "7.16.5",
     "@codesandbox/sandpack-react": "1.16.0",
+    "@floating-ui/react-native": "0.10.0",
     "@gorhom/bottom-sheet": "4.4.6",
     "@gorhom/portal": "1.0.14",
-    "@floating-ui/react-native": "0.10.0",
-    "react-native-tab-view": "3.5.2",
-    "react-native-pager-view": "6.2.1",
     "@hypermod/utils": "0.4.2",
-    "@react-native/metro-config": "0.72.9",
+    "@playwright/test": "1.41.2",
+    "@razorpay/i18nify-js": "1.4.0",
+    "@razorpay/i18nify-react": "4.0.0",
     "@react-native-async-storage/async-storage": "1.19.1",
     "@react-native-community/datetimepicker": "5.0.1",
     "@react-native-community/slider": "4.1.12",
+    "@react-native/metro-config": "0.72.9",
     "@rollup/plugin-alias": "5.0.0",
     "@rollup/plugin-babel": "6.0.3",
     "@rollup/plugin-commonjs": "25.0.4",
     "@rollup/plugin-node-resolve": "15.2.1",
     "@rollup/plugin-replace": "5.0.2",
     "@size-limit/preset-big-lib": "8.2.4",
+    "@stackblitz/sdk": "1.9.0",
     "@storybook/addon-a11y": "7.1.0",
     "@storybook/addon-actions": "7.1.0",
     "@storybook/addon-controls": "7.1.0",
     "@storybook/addon-docs": "7.1.0",
     "@storybook/addon-essentials": "7.1.0",
+    "@storybook/addon-interactions": "7.6.6",
     "@storybook/addon-links": "7.1.0",
     "@storybook/addon-ondevice-actions": "7.0.0-alpha.5",
     "@storybook/addon-ondevice-backgrounds": "7.0.0-alpha.5",
     "@storybook/addon-ondevice-controls": "7.0.0-alpha.5",
     "@storybook/addon-ondevice-notes": "7.0.0-alpha.5",
     "@storybook/design-system": "7.15.13",
+    "@storybook/jest": "0.2.3",
     "@storybook/node-logger": "7.1.0",
     "@storybook/preset-create-react-app": "7.1.0",
     "@storybook/react": "7.1.0",
     "@storybook/react-native": "7.0.0-alpha.5",
     "@storybook/react-webpack5": "7.1.0",
-    "@stackblitz/sdk": "1.9.0",
-    "storybook-react-router": "1.0.8",
-    "react-router-dom": "5.3.4",
+    "@storybook/test-runner": "0.16.0",
+    "@storybook/testing-library": "0.2.2",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/jest-native": "5.4.2",
     "@testing-library/react": "13.4.0",
     "@testing-library/react-hooks": "8.0.1",
     "@testing-library/react-native": "12.2.0",
     "@testing-library/user-event": "14.4.3",
+    "@types/body-scroll-lock": "3.1.0",
     "@types/dedent": "0.7.0",
     "@types/jest": "29.5.3",
     "@types/jest-axe": "3.5.5",
@@ -208,20 +207,22 @@
     "@types/jsdom": "20.0.1",
     "@types/react": "17.0.38",
     "@types/react-native": "0.72.2",
+    "@types/react-router-dom": "5.3.3",
     "@types/react-test-renderer": "17.0.1",
+    "@types/storybook-react-router": "1.0.5",
     "@types/styled-components": "5.1.25",
     "@types/styled-components-react-native": "5.1.3",
     "@types/tinycolor2": "1.4.3",
-    "@types/react-router-dom": "5.3.3",
-    "@types/storybook-react-router": "1.0.5",
     "any-leaf": "1.2.2",
     "args-parser": "1.3.0",
     "babel-jest": "29.6.1",
     "babel-loader": "8.2.3",
     "babel-plugin-module-resolver": "4.1.0",
     "babel-plugin-styled-components": "1.12.0",
+    "browserstack-node-sdk": "1.31.20",
     "bundlemon": "2.0.1",
     "chalk": "4.1.1",
+    "chromatic": "6.22.0",
     "copyfiles": "2.4.1",
     "cross-env": "7.0.3",
     "dedent": "0.7.0",
@@ -229,6 +230,7 @@
     "execa": "5.0.0",
     "figures": "3.2.0",
     "flat": "5.0.2",
+    "http-server": "14.1.1",
     "ismobilejs": "1.1.1",
     "jest": "29.6.1",
     "jest-axe": "8.0.0",
@@ -238,16 +240,27 @@
     "jest-useragent-mock": "0.1.1",
     "jscodeshift": "0.13.1",
     "jsdom": "20.0.2",
+    "jsdom-testing-mocks": "1.9.0",
+    "metro-config": "0.66.2",
     "metro-react-native-babel-preset": "0.76.7",
     "moniker": "0.1.2",
     "npm-run-all": "4.1.5",
     "outdent": "0.8.0",
+    "postinstall-postinstall": "2.1.0",
+    "ramda": "0.29.1",
     "react": "18.2.0",
+    "react-docgen-typescript-plugin": "1.0.5",
     "react-dom": "18.2.0",
+    "react-json-tree": "0.18.0",
     "react-native": "0.72.3",
     "react-native-gesture-handler": "2.9.0",
+    "react-native-pager-view": "6.2.1",
     "react-native-reanimated": "3.4.1",
+    "react-native-safe-area-context": "3.4.1",
     "react-native-svg": "12.3.0",
+    "react-native-tab-view": "3.5.2",
+    "react-refresh": "0.11.0",
+    "react-router-dom": "5.3.4",
     "react-scripts": "5.0.1",
     "react-test-renderer": "18.2.0",
     "rollup": "3.28.1",
@@ -255,40 +268,30 @@
     "rollup-plugin-peer-deps-external": "2.2.4",
     "size-limit": "8.2.4",
     "storybook": "7.1.0",
+    "storybook-react-router": "1.0.8",
     "style-dictionary": "3.7.1",
     "styled-components": "5.3.5",
     "tsconfig-paths-webpack-plugin": "3.5.2",
-    "jsdom-testing-mocks": "1.9.0",
-    "postinstall-postinstall": "2.1.0",
-    "react-refresh": "0.11.0",
-    "react-docgen-typescript-plugin": "1.0.5",
-    "react-json-tree": "0.18.0",
-    "metro-config": "0.66.2",
-    "@babel/plugin-proposal-class-static-block": "7.21.0",
-    "react-native-safe-area-context": "3.4.1",
     "ttypescript": "1.5.15",
     "typescript": "4.9",
     "typescript-transform-paths": "3.4.6",
-    "@types/body-scroll-lock": "3.1.0",
-    "ramda": "0.29.1",
-    "@razorpay/i18nify-js": "1.4.0",
-    "@razorpay/i18nify-react": "4.0.0"
+    "wait-on": "7.2.0"
   },
   "peerDependencies": {
-    "react": ">=18",
-    "react-dom": ">=18",
-    "styled-components": "^5",
-    "react-native": "^0.72",
     "@floating-ui/react-native": "^0.10.0",
-    "react-native-reanimated": "^3.4.1",
-    "react-native-tab-view": "^3.5.2",
-    "react-native-pager-view": "^6.2.1",
-    "react-native-svg": "^12.3.0",
-    "react-native-gesture-handler": "^2.9.0",
-    "react-hot-toast": "2.4.1",
     "@gorhom/bottom-sheet": "^4.4.6",
     "@gorhom/portal": "^1.0.14",
-    "@razorpay/i18nify-js": "^1.4.0"
+    "@razorpay/i18nify-js": "^1.4.0",
+    "react": ">=18",
+    "react-dom": ">=18",
+    "react-hot-toast": "2.4.1",
+    "react-native": "^0.72",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-pager-view": "^6.2.1",
+    "react-native-reanimated": "^3.4.1",
+    "react-native-svg": "^12.3.0",
+    "react-native-tab-view": "^3.5.2",
+    "styled-components": "^5"
   },
   "peerDependenciesMeta": {
     "react-native": {
