--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -127,7 +127,8 @@
     "watch:test:react-native": "yarn test:react-native --watch --onlyChanged",
     "chromatic": "npx chromatic",
     "publish-npm": "node ./scripts/publishToNpm.js",
-    "bundle-size": "node ./scripts/generateBundleSizeInfo.js",
+    "pregenerate-bundle-size-info": "yarn run-s build:clean build:generate-types build:react-prod",
+    "generate-bundle-size-info": "node ./scripts/generateBundleSizeInfo.js",
     "generate-github-npmrc": "node ./scripts/generateGitHubRegistryNpmrc.js",
     "postinstall": "patch-package"
   },
