--- a/.prettierignore
+++ b/.prettierignore
@@ -10,6 +10,8 @@ coverage
 packages/blade/components.js
 packages/blade/tokens.js
 packages/blade/utils.js
+packages/blade/PRBundleSizeStats.json
+packages/blade/baseBundleSizeStats.json
 
 # misc
 .DS_Store
