--- a/packages/blade/.gitignore
+++ b/packages/blade/.gitignore
@@ -55,7 +55,7 @@ yarn-error.log
 # Bundle artifact
 *.jsbundle
 .size-limit.json
-PRBundleSizeStats.json
+prBundleSizeStats.json
 
 # Ruby / CocoaPods
 /ios/Pods/
