--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,2 @@
-/packages/blade/ @chaitanyadeorukhkar @kamleshchandnani
+/packages/blade/ @chaitanyadeorukhkar @kamleshchandnani @anuraghazra @snitin315 @saurabhdaware
+
