--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.12.1
+          # https://stackoverflow.com/a/73824182
+          registry-url: "https://npm.pkg.github.com"
       - name: Setup Cache & Install Dependencies
         uses: ./.github/actions/install-dependencies
       - name: Create Release Pull Request & Publish packages
