--- a/.github/workflows/blade-bundle-size.yml
+++ b/.github/workflows/blade-bundle-size.yml
@@ -25,6 +25,8 @@ jobs:
           # https://stackoverflow.com/a/73824182
           registry-url: "https://npm.pkg.github.com"
       - name: Setup Cache & Install Dependencies
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         uses: ./.github/actions/install-dependencies
       - name: Update Bundle Size Data
         run: yarn generate-bundle-size-info
@@ -52,6 +54,8 @@ jobs:
           # https://stackoverflow.com/a/73824182
           registry-url: "https://npm.pkg.github.com"
       - name: Setup Cache & Install Dependencies
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         uses: ./.github/actions/install-dependencies
       - name: Build Blade React Production
         run: yarn run-s build:clean build:generate-types build:react-prod
