chore: run http in bg

--- a/.github/workflows/blade-browserstack.yml
+++ b/.github/workflows/blade-browserstack.yml
@@ -19,6 +19,8 @@ on:
   pull_request:
     types: [labeled]
   push:
+    branches:
+      - master
 
 env:
   GITHUB_ACCESS_TOKEN: ${{ secrets.CI_BOT_TOKEN }}
@@ -52,7 +54,7 @@ jobs:
       - name: Run Storybook
         run: |
           yarn react:storybook:build
-          yarn react:storybook:serve
+          yarn react:storybook:serve &
         working-directory: packages/blade
         
       - name: 'Run E2E Tests'
