--- a/package.json
+++ b/package.json
@@ -63,6 +63,9 @@
     "stylelint-processor-styled-components": "1.10.0",
     "typescript": "4.8.2"
   },
+  "resolutions": {
+    "@types/react": "^17.0.0"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
