--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -306,6 +306,7 @@
     "@storybook/**/react": "18.2.0",
     "react-dom": "18.2.0",
     "react": "18.2.0",
+    "@types/react": "^17.0.4",
     "styled-components": "^5"
   }
 }
