--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@babel/eslint-parser": "7.21.8",
     "@changesets/cli": "2.24.1",
     "@types/jest": "26.0.23",
-    "@types/react": "17.0.4",
+    "@types/react": "17.0.38",
     "@types/react-native": "0.64.4",
     "@types/styled-components": "5.1.25",
     "@types/styled-components-react-native": "5.1.3",
@@ -64,7 +64,7 @@
     "typescript": "4.8.2"
   },
   "resolutions": {
-    "@types/react": "^17.0.4"
+    "@types/react": "17.0.38"
   },
   "husky": {
     "hooks": {
