--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "@babel/eslint-parser": "7.21.8",
     "@changesets/cli": "2.24.1",
     "@types/jest": "26.0.23",
-    "@types/styled-components": "5.1.25",
-    "@types/styled-components-react-native": "5.1.3",
+    "@types/react": "17.0.4",
     "@typescript-eslint/eslint-plugin": "5.59.6",
     "@typescript-eslint/parser": "5.59.6",
     "@typescript-eslint/utils": "5.59.6",
@@ -62,7 +61,8 @@
     "typescript": "4.8.2"
   },
   "resolutions": {
-    "@types/react": "18.2.74"
+    "@types/react": "^18.0.21",
+    "@types/styled-components": "5.1.34"
   },
   "husky": {
     "hooks": {
