--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -208,10 +208,10 @@
     "@types/jest-axe": "3.5.5",
     "@types/jscodeshift": "0.11.6",
     "@types/jsdom": "20.0.1",
-    "@types/react": "18.2.74",
+    "@types/react": "18.0.21",
     "@types/react-native": "0.72.2",
     "@types/react-test-renderer": "17.0.1",
-    "@types/styled-components": "5.1.25",
+    "@types/styled-components": "5.1.34",
     "@types/styled-components-react-native": "5.1.3",
     "@types/tinycolor2": "1.4.3",
     "@types/react-router-dom": "5.3.3",
@@ -271,7 +271,7 @@
     "react-native-safe-area-context": "3.4.1",
     "ttypescript": "1.5.15",
     "typescript": "4.9",
-    "typescript-transform-paths": "3.4.6",
+    "typescript-transform-paths": "3.4.7",
     "@types/body-scroll-lock": "3.1.0",
     "ramda": "0.29.1",
     "@razorpay/i18nify-js": "1.8.0",
@@ -306,7 +306,8 @@
     "@storybook/**/react": "18.2.0",
     "react-dom": "18.2.0",
     "react": "18.2.0",
-    "@types/react": "18.2.74",
+    "@types/react": "^18.0.21",
+    "@types/styled-components": "5.1.34",
     "styled-components": "^5"
   }
 }
