--- a/packages/blade/.gitignore
+++ b/packages/blade/.gitignore
@@ -63,3 +63,7 @@ prBundleSizeStats.json
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+
+# Browserstack
+logs
+local.log
