feat: add tests

--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -141,7 +141,8 @@
     "react-hot-toast": "2.4.1",
     "@emotion/react": "11.11.1",
     "@table-library/react-table-library": "4.1.7",
-    "tinycolor2": "1.6.0"
+    "tinycolor2": "1.6.0",
+    "universal-base64": "2.1.0"
   },
   "devDependencies": {
     "http-server": "14.1.1",
