feat: added initial datepicker

--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -142,7 +142,11 @@
     "@emotion/react": "11.11.1",
     "@table-library/react-table-library": "4.1.7",
     "tinycolor2": "1.6.0",
-    "universal-base64": "2.1.0"
+    "universal-base64": "2.1.0",
+    "@mantine/core": "7.8.1",
+    "@mantine/dates": "7.8.1",
+    "@mantine/hooks": "7.8.1",
+    "dayjs": "1.11.10"
   },
   "devDependencies": {
     "http-server": "14.1.1",
