--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -138,12 +138,16 @@
     "ts-deepmerge": "6.2.0",
     "use-presence": "1.1.0",
     "@use-gesture/react": "10.2.24",
-    "@floating-ui/react": "0.25.4",
+    "@floating-ui/react": "0.26.13",
     "react-hot-toast": "2.4.1",
     "@emotion/react": "11.11.1",
     "@table-library/react-table-library": "4.1.7",
     "tinycolor2": "1.6.0",
-    "universal-base64": "2.1.0"
+    "universal-base64": "2.1.0",
+    "@mantine/core": "7.8.1",
+    "@mantine/dates": "7.8.1",
+    "@mantine/hooks": "7.8.1",
+    "dayjs": "1.11.10"
   },
   "devDependencies": {
     "http-server": "14.1.1",
