chore: fix interaction test

--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -284,7 +284,8 @@
     "@razorpay/i18nify-react": "4.0.8",
     "plop": "3.1.1",
     "node-plop": "0.32.0",
-    "svgson": "5.3.1"
+    "svgson": "5.3.1",
+    "mockdate": "3.0.5"
   },
   "peerDependencies": {
     "react": ">=18",
