--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -300,7 +300,8 @@
     "react-hot-toast": "2.4.1",
     "@gorhom/bottom-sheet": "^4.4.6",
     "@gorhom/portal": "^1.0.14",
-    "@razorpay/i18nify-js": "^1.9.3"
+    "@razorpay/i18nify-js": "^1.9.3",
+    "@razorpay/i18nify-react": "^4.0.8"
   },
   "peerDependenciesMeta": {
     "react-native": {
