feat: remove datepicker and table component

--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -116,8 +116,8 @@
     "react:storybook:serve:test": "wait-on http://127.0.0.1:9009/ && yarn test:react:interaction",
     "test:react:interaction": "cross-env FRAMEWORK=REACT test-storybook -c ./.storybook/react --url http://127.0.0.1:9009/",
     "test:react:interaction:ci": "yarn react:storybook:build && run-p react:storybook:serve react:storybook:serve:test --race",
-    "test:react": "cross-env FRAMEWORK=REACT jest -c ./jest.web.config.cjs --shard=$SHARD --forceExit",
-    "test:react-native": "cross-env FRAMEWORK=REACT_NATIVE jest -c ./jest.native.config.cjs --shard=$SHARD --forceExit",
+    "test:react": "cross-env FRAMEWORK=REACT jest -c ./jest.web.config.js --shard=$SHARD --forceExit",
+    "test:react-native": "cross-env FRAMEWORK=REACT_NATIVE jest -c ./jest.native.config.js --shard=$SHARD --forceExit",
     "start:ios": "cross-env NODE_OPTIONS=--openssl-legacy-provider run-p react-native:storybook:start react-native:storybook:ios",
     "start:android": "cross-env NODE_OPTIONS=--openssl-legacy-provider run-p react-native:storybook:start react-native:storybook:android",
     "start:native": "cross-env NODE_OPTIONS=--openssl-legacy-provider run-p react-native:storybook:start react-native:storybook:android react-native:storybook:ios",
@@ -127,7 +127,7 @@
     "watch:test:react": "yarn test:react --watch --onlyChanged",
     "watch:test:react-native": "yarn test:react-native --watch --onlyChanged",
     "chromatic": "npx chromatic",
-    "publish-npm": "node ./scripts/publishToNpm.js",
+    "publish-npm": "node ./scripts/publishToNpm.cjs",
     "pregenerate-bundle-size-info": "yarn run-s build:clean build:generate-types build:react-prod",
     "generate-bundle-size-info": "node ./scripts/generateBundleSizeInfo.cjs",
     "generate-github-npmrc": "node ./scripts/generateGitHubRegistryNpmrc.cjs",
