--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -147,7 +147,8 @@
     "@mantine/core": "6.0.21",
     "@mantine/dates": "6.0.21",
     "@mantine/hooks": "6.0.21",
-    "dayjs": "1.11.10"
+    "dayjs": "1.11.10",
+    "@figma/code-connect": "1.0.6"
   },
   "devDependencies": {
     "http-server": "14.1.1",
