--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -27,7 +27,10 @@
     "fonts",
     "fonts.css",
     "utils.native.js",
-    "coverageUtils.d.ts"
+    "coverageUtils.d.ts",
+    "motion.d.ts",
+    "motion.js",
+    "motion.native.js"
   ],
   "keywords": [
     "design system",
@@ -74,6 +77,18 @@
         "development": "./build/lib/web/development/utils/index.js",
         "production": "./build/lib/web/production/utils/index.js",
         "default": "./build/lib/web/production/utils/index.js"
+      }
+    },
+    "./motion": {
+      "react-native": {
+        "types": "./motion.d.ts",
+        "default": "./build/lib/native/motion/index.js"
+      },
+      "default": {
+        "types": "./motion.d.ts",
+        "development": "./build/lib/web/development/motion/index.js",
+        "production": "./build/lib/web/production/motion/index.js",
+        "default": "./build/lib/web/production/motion/index.js"
       }
     },
     "./coverageUtils": {
