--- a/packages/blade/package.json
+++ b/packages/blade/package.json
@@ -237,6 +237,7 @@
     "execa": "5.0.0",
     "figures": "3.2.0",
     "flat": "5.0.2",
+    "framer-motion": "11.5.4",
     "globby": "14.0.1",
     "ismobilejs": "1.1.1",
     "jest": "29.6.1",
@@ -290,6 +291,7 @@
     "react": ">=18",
     "react-dom": ">=18",
     "styled-components": "^5",
+    "framer-motion": "^11",
     "react-native": "^0.72",
     "@floating-ui/react-native": "^0.10.0",
     "react-native-reanimated": "^3.4.1",
